--- a/Quiz.Aplicacao.API/appsettings.json
+++ b/Quiz.Aplicacao.API/appsettings.json
@@ -2,9 +2,15 @@
   "ConnectionStrings": {
     "BASEQUIZ": "Data Source=MYSQL5021.site4now.net;Initial Catalog=db_a5448f_abner30;Persist Security Info=True;User ID=a5448f_abner30;Password=wefcvb58960906;Max Pool Size=1000;"
   },
-  "TokenConfigurations": {
+  //"TokenConfigurations": {
+  //  "Audience": "ExemploAudience",
+  //  "Issuer": "ExemploIssuer",
+  //  "Seconds": 120
+  //},
+  "Jwt": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:63939/",
     "Audience": "ExemploAudience",
-    "Issuer": "ExemploIssuer",
     "Seconds": 120
   },
   "Logging": {
